[package]
name = "random-geojson"
version = "0.1.3"
edition = "2024"
description = "Generate random GeoJSON data"
authors = ["Francisco Jimenez <jjcfrank@gmail.com>"]
repository = "https://github.com/jjcfrancisco/random-geojson"
license = "MIT OR Apache-2.0"
keywords = ["geojson", "random"]
categories = ["development-tools", "geospatial"]

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
geojson = "0.24.2"
rand = "0.9.1"
random_word = { version = "0.5.0", features = ["en"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = { version = "1.17.0", features = ["v4"] }
